2005-06-14  Timo Schulz  <twoaday@g10code.de>

	* GPGExch.cpp (Help): Use appropriate array boundaries.
	(OnWriteComplete): Removed unused code.
	(CGPGExchExt): There is no need to initialize the COM
	library any longer.
	(~CGPGExchExt): Likewise, but we don't need to unload it.
	* GPGOptionsDlg.cpp (GPGOptionsDlgProc): Support to
	store also the default 'encrypt-to' ID.

2005-05-03  Timo Schulz  <twoaday@g10code.de>

	* GPGExch.cpp: Remove 'Add standard key' items.
	Use symbolic names for constants and not Command1, 2...

2005-05-02  Timo Schulz  <twoaday@g10code.de>

	* GPGExch.cpp (OnWriteComplete): Replaced old gdgpg
	code with the new gpgmedlgs code.

2005-02-15  Timo Schulz  <twoaday@g10code.de>

	* GPG.cpp: Fixed indent level and minor tweaks.
	* GPGExch.cpp (OnRead): Do not allow to modify the object
	unless it has encrypted attachments. This propably fixes the
	problem that mails are sometimes stored in plaintext.

2005-02-14  Timo Schulz  <twoaday@g10code.de>

	* GPGExch.cpp (OnRead): Check return value. Noted by Dennis Martin.
	Free all buffers and be stricter with return codes.
	* GPGMessage.cpp (isUnset): Likewise.
	* GPG.cpp (ProcessAttachments): If we only sign without encryption,
	add .sig and not .pgp. Also noted by Dennis Martin.
		
2005-01-18  Timo Schulz  <twoaday@g10code.de>

	* GPGExch.cpp (ExchLogInfo): New.
	(OnRead): Log all errors.

2004-11-17  Timo Schulz  <twoaday@g10code.de>

	* GPG.cpp (ReadGPGOptions): Initialize m_LogFile to NULL.
	(DecryptMessage): Delete temp file left over from a possible
	cleartext verification. Noted by Achim.

2004-10-27  Timo Schulz  <twoaday@g10code.de>

	* GPG.cpp (ProcessAttachments): Set default extension to
	PGP since this will enhance the PGP compatibility.
	* GPGExch.cpp (OnRead): Supress the question if we the
	mail is application/pgp.

2004-10-25  Timo Schulz  <twoaday@g10code.de>

	* GPG.cpp (CheckPGPMime): Generic function to figure out the